<resources>
    <string name="app_name">Road Quality Audit</string>

    <string name="hello_blank_fragment">Detecting motion</string>
    <string name="menu_about">About</string>
    <string name="menu_credits">Credits</string>

    <string name="dialog_question">Would you like to start a trip?</string>
    <string name="dialog_positive">Yes</string>
    <string name="dialog_negative">No</string>
    <string name="not_detecting">Press on the toggle to start your trip</string>
    <string name="uploading">Uploading latest file ....</string>
    <string name="detecting">Detecting potholes. Drive safe.</string>
    <string name="menu_login">Login</string>
    <string name="menu_partners">Partners</string>

    <string name="warnings">We are currently facing issues in detecting potholes in bumper to bumper and slow moving traffic\n
        Please bear with us while this is improved\n\n
        Please clamp the device on a mobile holder for the best accuracy</string>

    <string name="about1">Potholes are a major source of a lot of problems we see on Indian roads. Slow moving traffic, lower mileage, high maintenance
        and injuries, all of these issues are linked to potholes and poor roads.
    </string>
    <string name="about2">Because this problem exists everywhere and happens all through the year, the government cannot fix everything efficiently.
        Citizens must take action sometimes. In fact, some students have found ways to fix small potholes. The data collected here can help use identify areas where we can take action without government intervention
        \n\nWe want to enable everyone in taking small steps to collectively help solve this big problem.
        \n\nSolve small, dent big!
    </string>
    <string name="about3">Turn on the app, drive and contribute. It\'s that simple.</string>
    <string name="title_activity_maps">Map</string>
    <string name="icons_home"><a href="https://icons8.com/web-app/5572/Home">Home icon credits</a></string>
    <string name="icons_settings"><a href="https://icons8.com/web-app/5590/Settings">Settings icon credits</a></string>

    <string name="no_location_detected">
        No location detected. Make sure location is enabled on the device.
    </string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>

    <string name="trips">All your trips</string>
    <string name="low">Lower Value</string>
    <string name="up">Upper Value</string>
    <string name="Thresholds">Thresholds</string>
    <string name="add_car">Please add a car</string>
    <string name="edit_high">Edit High</string>
    <string name="edit_low">Edit Low</string>
    <string name="submit">Submit</string>
    <string name="carname">Car Name</string>
    <string name="carmodel">Car Model</string>

    <string-array name="debugging_ids">
        <item>bgWUREt57xcWBvHSUw6rtw78EXX2</item> <!--Kanishk-->
        <item>y0xSs7IhheUuKxckviuVnOxf9Ac2</item> <!--Kanishk-->
    </string-array>
    <string name="s3bucketname">***REMOVED***</string>
    <string name="notification_channel_id">PotholeNotifier</string>
    <string name="invite_message">Hi! Check out this app to map potholes on Indian streets and help make our roads safer. Download it at: https://play.google.com/store/apps/details?id=org.reapbenefit.gautam.intern.potholedetectorbeta</string>
    <string name="db_update_from_maps_activity">DB_UPDATE_FROM_MAPS</string>
    <string name="set_uploaded_true">org.reapbenefit.gautam.intern.potholedetectorbeta.SET_UPLOADED_TRUE</string>
    <string name="new_trip_insert">NEW_TRIP_INSERT</string>
    <string name="probable_pothole_location_set">probablePotholelatLngs</string>
    <string name="definite_pothole_location_set">definitePotholelatLngs</string>
    <string name="file_delete_setting">file_delete</string>
    <string name="auto_upload_setting">auto_upload</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="action_settings">Settings</string>
    <!--OnBoarding strings-->
    <string name="first_section_title">Welcome.</string>
    <string name="second_section_title">Mapping potholes is simple.</string>
    <string name="third_section_title">Understand your data.</string>
    <string name="first_section_info">Contribute to a global map of potholes on the road and ensure your own safety.</string>
    <string name="second_section_info">Simply click the orange play button to start logging. Press the stop button to stop logging (preferably on a holder). </string>
    <string name="third_section_info">After every trip of more than half a kilometre, we\'ll show you a map.\nThe red markers represent definite potholes - watch out for them in the future.</string>

    <!--API strings-->
    <string name="user_data_table">UserData</string>
    <string name="trip_data_table">TripsData</string>
    <string name="highest_pothole_trip_broadcast">HIGHEST_POTHOLE_TRIP</string>
    <string name="trips_not_in_RDS">tripsNotInRDS</string>
    <string name="speed_with_location_hashmap">SPEED_WITH_LOCATION_HASHMAP</string>
    <string name="global_unique_pothole_locations">GLOBAL_UNIQUE_POTHOLE_LOCATIONS</string>
    <string name="processed_trip">tripUploaded</string>
    <string name="trip_with_user_rating">tripUploaded</string>
    <string name="hits_unique_potholes">HITS_UNIQUE_POTHOLES</string>

    <string name="highest_pothole_latlngs_check">HIGHEST_POTHOLE_LATLONG_CHECK</string>
    <string name="is_viewing_highest_pothole_trip">IS_VIEWING_HIGHEST_POTHOLE_TRIP</string>
    <string name="highest_pothole_trip_definite_potholes">HIGHEST_POTHOLE_TRIP_DEFINITE_POTHOLES</string>
    <string name="highest_pothole_trip_probable_potholes">HIGHEST_POTHOLE_TRIP_PROBABLE_POTHOLES</string>

    <string name="minutes_wasted">minutesWasted</string>
    <string name="minutes_accuracy_low">minutesAccuracyLow</string>
    <string name="traffic_time_start">TRAFFIC_TIME_START</string>
    <string name="upload_start_notifier_intent">UPLOAD_START_NOTIFIER_INTENT</string>
    <string name="duration_in_seconds">DURATION_IN_SECONDS</string>
    <string name="speed_updates_not_enough">Your device could not register your vehicle speed. Results may be slightly inaccurate.</string>

    <string name="tweet_content"> potholes on my trip today. Map your trips too! https://goo.gl/p7CQjd </string>
    <string name="tweet_snackbar">Tell others about your trip!</string>

    <string name="RED_100">#440000</string>
    <string name="RED_80">#660000</string>
    <string name="RED_60">#880000</string>
    <string name="RED_40">#CC0000</string>
    <string name="RED_20">#FF0000</string>

    <string name="logger_channel_id">LoggerService</string>
</resources>
