<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/actions_about"
        android:title="@string/menu_about"
        android:orderInCategory="100">
    </item>
    <item
        android:id="@+id/actions_credits"
        android:title="@string/menu_credits"
        android:orderInCategory="200"
        ></item>
    <item
        android:id="@+id/actions_partners"
        android:title="@string/menu_partners"
        android:orderInCategory="300"
        ></item>
    <item
        android:id="@+id/actions_login"
        android:title="@string/menu_login"
        android:orderInCategory="400"
        ></item>
    <item
        android:id="@+id/actions_settings"
        android:title="Settings"
        android:orderInCategory="500">

    </item>

</menu>