<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.reapbenefit.gautam.intern.potholedetectorbeta.AdvancedModeFragment">

    <!-- TODO: Update blank fragment layout -->

    <GridLayout
        android:id="@+id/content_profiles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:columnCount="3"
        android:rowCount="6"
        android:layout_gravity="top">

    <TextView
        android:text="@string/low"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/low"
        android:layout_row="3"
        android:layout_column="0"
        android:textSize="15dp"/>

    <TextView
        android:text="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/curHighText"
        android:layout_row="2"
        android:layout_column="1"
        android:textSize="15dp"/>

    <TextView
        android:text="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/curLowText"
        android:layout_row="3"
        android:layout_column="1"
        android:textSize="15dp"/>

    <TextView
        android:text="@string/up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/high"
        android:layout_row="2"
        android:layout_column="0"
        android:textSize="15dp"/>

    <TextView
        android:text="@string/Thresholds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView25"
        android:layout_row="1"
        android:layout_column="0"
        android:textSize="20dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:layout_row="2"
        android:layout_column="2"
        android:layout_marginLeft="20dp"
        android:id="@+id/inputHighThreshold"
        android:hint="@string/edit_high" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:layout_row="3"
        android:layout_column="2"
        android:layout_marginLeft="20dp"
        android:id="@+id/inputLowThreshold"
        android:hint="@string/edit_low" />


    <LinearLayout

        android:layout_row="0"
        android:layout_column="0"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/add_car"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="20dp"
            android:id="@+id/car_text" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/model_text"
            android:textColor="#000000"
            android:textSize="20dp"/>



    </LinearLayout>

        <Button
            android:text="@string/submit"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/submit" />


    </GridLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trips"
        android:textColor="#000"
        android:textSize="30dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/trips_list"
        android:divider="#000"
        android:dividerHeight="1dp">

    </ListView>


</LinearLayout>
