<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:https="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.reapbenefit.gautam.intern.potholedetectorbeta.Activities.AboutActivity">

    <include
        layout="@layout/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="This app is in beta."
                android:textAlignment="center"
                android:textSize="20dp"
                android:fontFamily="sans-serif-condensed"
                android:padding="10dp"
                android:textStyle="normal|bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="To help us improve the detection, please rate every trip using the slider shown after the trip"
                android:textAlignment="center"
                android:textStyle="normal"
                android:fontFamily="sans-serif-condensed"
                android:paddingBottom="10dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Why are we doing this?"
                android:textAlignment="center"
                android:textStyle="normal|bold"
                android:textSize="20dp"
                android:fontFamily="sans-serif-condensed"
                android:padding="10dp"/>

            <TextView
                android:text="@string/about1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="start"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:fontFamily="sans-serif-condensed"
                android:id="@+id/textView2" />

            <TextView
                android:text="@string/about2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="start"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:fontFamily="sans-serif-condensed"
                android:id="@+id/textView" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="We take privacy seriously."
                android:textAlignment="center"
                android:textStyle="normal|bold"
                android:textSize="20dp"
                android:fontFamily="sans-serif-condensed"
                android:padding="10dp" />

            <TextView
                android:clickable="true"
                android:text="Click here to know more."
                android:textColorLink="@android:color/holo_blue_dark"
                android:linksClickable="true"
                android:autoLink="all"
                android:id="@+id/privacy_policy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:fontFamily="sans-serif-condensed" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="How can you help?"
                android:textAlignment="center"
                android:textStyle="normal|bold"
                android:textSize="20dp"
                android:fontFamily="sans-serif-condensed"
                android:padding="10dp" />

            <TextView
                android:text="@string/about3"
                android:autoLink="web"
                android:linksClickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:fontFamily="sans-serif-condensed" />

            <TextView
                android:text="If you'd like to contribute to the technical aspects (Data Science and Machine Learning, among others), please contact us."
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:fontFamily="sans-serif-condensed" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Contact Us"
                android:textSize="20dp"
                android:textAlignment="center"
                android:textStyle="normal|bold"
                android:fontFamily="sans-serif-condensed"
                android:paddingTop="10dp" />

            <TextView
                android:text="intern.gautam@reapbenefit.org\n\n"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:fontFamily="sans-serif-condensed"
                android:textAlignment="center"
                android:textStyle="normal|bold|italic"
                android:onClick="sendEmail"/>


        </LinearLayout>
    </ScrollView>



    <!--
        Potholes - = slow trffic lower milage maintainance injuroies
        happen all the time, gov doesnt know where they are

        we just want you to use this app when you drive.

        How do you help us? Turn the app on, drive and contribute


        credits : break it up
        idea
        coding
        logo
        UI/UX
        data analysis


        programming used
        mentor name

        Future : will be made open source soon.
        data analytics is coming up
        partners : reap benefit

        Using the data we collect, we will be able to do multiple things\n
        1. Train machine learning models that will help us correctly classify a bump as a pothole or a patch
        of bad road. We will publish these results online.\n
        2. Analyse driver behaviour to detect bad driving habits and helping you correct them.\n
        3. Analyse your car\'s route and give you feedback on how you can get the best out of your car and the route in terms of fuel efficiency
        and time spend on the road.\n
    -->

</LinearLayout>
